--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
           </div>
           <div class="day-container">
             <div class="row">
-      
+              <div class="col-md-2 col-sm-6 mb-3">
+              </div>
+              <div class="col-md-2 col-sm-6 mb-3">
+              </div>
             </div>
           </div>
-        </div>
+          
       </section>
 
 
